--- a/package.json
+++ b/package.json
@@ -7,26 +7,31 @@
   "private": true,
   "dependencies": {
     "@stackchat/dynamic-content-toolkit": "0.0.9",
-    "request-promise": "4.2.4"
+    "request-promise": "4.2.5"
   },
   "devDependencies": {
-    "@types/expect": "1.20.4",
-    "@types/jest": "24.0.15",
-    "@types/node": "8.10.47",
-    "@types/request-promise": "4.1.44",
-    "jest": "24.8.0",
-    "ts-jest": "24.0.2",
-    "ts-loader": "5.3.3",
-    "tslint": "5.18.0",
-    "typescript": "3.5.3",
-    "webpack": "4.37.0",
-    "webpack-cli": "3.3.6"
+    "@types/jest": "25.2.3",
+    "@types/node": "12.12.37",
+    "@types/request-promise": "4.1.46",
+    "@typescript-eslint/eslint-plugin": "3.0.1",
+    "@typescript-eslint/parser": "3.0.1",
+    "eslint": "^7.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-notice": "^0.9.10",
+    "eslint-plugin-security": "^1.4.0",
+    "jest": "26.0.1",
+    "ts-jest": "26.0.0",
+    "ts-loader": "7.0.5",
+    "typescript": "3.9.3",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11"
   },
   "scripts": {
     "build": "webpack",
     "clean": "rm -rf build dist",
-    "lint": "tslint -t stylish --project tsconfig.json",
-    "test": "jest"
+    "lint": "eslint --quiet --ext .js,.jsx,.ts,.tsx ./src",
+    "lint:fix": "npm run lint --fix",
+    "test": "npm run lint && jest"
   },
   "jest": {
     "moduleFileExtensions": [
